styles: Replace old variables calls with skin variables
Replacing 'mediawiki.ui/variables.less' and WikimediaUI Base @import
with new skin-aware 'mediawiki.skin.variables.less' standard.
While there, removing WikimediaUI Base as foreign resource from
extension's very own 'foreign-resources.yaml'.

Also
- replacing several static values with new Codex design tokens featuring
  skin variables for following properties:
 - background-color
 - color
 - border-width, border-style, border-color and border shorthand
 - border-radius
 - box-shadow colors
 - outline-width, outline-style, outline-color and outline shorthand
 - opacity

Changing a few Less mixins on the way to make them easier readable,
introducing `@param-` prefix for Less params due to skin variables
being named similarly.

Required MediaWiki core version is v1.41.0.

Bug: T319381
Bug: T332541
Bug: T332567
Bug: T334934
Depends-On: Iacce46bdd52ee24364308e09f9a766e26f3cc4ce
Change-Id: I944a30a002273350ba86d5ddefd466d8af781076

--- a/modules/ext.growthExperiments.Account.styles/ConfirmEmail.less
+++ b/modules/ext.growthExperiments.Account.styles/ConfirmEmail.less
@@ -1,3 +1,5 @@
+@import 'mediawiki.skin.variables.less';
+
 // Confusingly, the ID of the <div> wrapping the account creation form is userloginForm
 #userloginForm {
 	.mw-ge-confirmemail-captcha {
@@ -11,6 +13,6 @@
 	// so fake the inline label style
 	.htmlform-tip {
 		font-size: 0.92857143em;
-		color: #54595d;
+		color: @color-subtle;
 	}
 }
