--- a/modules/ext.growthExperiments.Account.styles/SpecialContributions.less
+++ b/modules/ext.growthExperiments.Account.styles/SpecialContributions.less
@@ -1,8 +1,8 @@
-@import 'mediawiki.ui/variables';
+@import 'mediawiki.skin.variables.less';
 
 .mw-ge-contributions-zero {
 	text-align: center;
-	color: @colorGray2;
+	color: @color-base;
 
 	&-title {
 		font-weight: bold;
