--- a/modules/ext.growthExperiments.Help/AskHelpPanel.less
+++ b/modules/ext.growthExperiments.Help/AskHelpPanel.less
@@ -1,10 +1,10 @@
-@import '../../lib/ooui/wikimedia-ui-base';
+@import 'mediawiki.skin.variables.less';
 @import '../utils/mixins.less';
 
 .mw-ge-askHelpPanel {
 	&-copyright {
 		margin-top: 16px;
-		color: @wmui-color-base20;
+		color: @color-subtle;
 		.rel-font-size-and-line-height( @parentFontSize: 16px, @targetFontSize: 13px, @targetLineHeight: 19.5px );
 	}
 
