--- a/modules/ext.growthExperiments.Homepage.NewImpact/components/NewImpact.less
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/components/NewImpact.less
@@ -1,11 +1,11 @@
-@import ( reference ) '../../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
+@import 'mediawiki.skin.variables.less';
 @import '../../utils/mixins.less';
 
 .ext-growthExperiments-NewImpact {
 	&__section-title.ext-growthExperiments-increaseSpecificity {
 		// Use same margin from desktop vector
 		margin-top: 0.3em;
-		// REVIEW: avaialable tokens?
+		// REVIEW: available tokens?
 		font-size: 1em;
 	}
 
