--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/ArticleCountWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/ArticleCountWidget.less
@@ -1,4 +1,4 @@
-@import 'mediawiki.ui/variables.less';
+@import 'mediawiki.skin.variables.less';
 
 @keyframes play45 {
 	0% {
@@ -13,7 +13,7 @@
 .mw-ge-suggestededits-articleCountWidget {
 	.oo-ui-labelWidget {
 		padding-left: 5px;
-		color: @colorGray5;
+		color: @color-subtle;
 	}
 
 	.live-broadcast-anim {
