--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionGroupWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionGroupWidget.less
@@ -1,5 +1,5 @@
+@import 'mediawiki.skin.variables.less';
 @import 'mediawiki.mixins';
-@import 'mediawiki.ui/variables';
 @import '../utils/variables.less';
 
 .mw-ge-suggestionGroupWidget {
@@ -20,7 +20,7 @@
 			justify-content: center;
 			display: flex;
 			font-size: @headerFontSize;
-			color: @colorGray2;
+			color: @color-base;
 		}
 	}
 }
