--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/TopicSelectionWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/TopicSelectionWidget.less
@@ -1,9 +1,9 @@
-@import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
+@import 'mediawiki.skin.variables.less';
 
 .mw-ge-TopicSelectionWidget {
 	&__match-mode {
 		margin: 8px auto;
 		padding: 8px 0;
-		border-bottom: 1px solid @wmui-color-base70;
+		border-bottom: @border-subtle;
 	}
 }
