--- a/modules/ext.growthExperiments.Homepage.styles/BannerModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/BannerModule.less
@@ -1,9 +1,9 @@
-@import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
+@import 'mediawiki.skin.variables.less';
 
 .growthexperiments-homepage-module-banner {
 	width: 100%;
-	background-color: @wmui-color-yellow90;
-	border-color: @wmui-color-yellow50;
+	background-color: @background-color-warning-subtle;
+	border-color: @border-color-warning;
 
 	// Override strong padding-top: 0 rule for mobile from Homepage.less
 	// FIXME this should probably be handled centrally for modules with no header
