--- a/modules/ext.growthExperiments.Homepage.styles/LastDayEditsWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/LastDayEditsWidget.less
@@ -1,5 +1,4 @@
-@import 'mediawiki.ui/variables';
-@import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
+@import 'mediawiki.skin.variables.less';
 
 .growthexperiments-last-day-edits-widget {
 	.suggested-edits-main {
@@ -29,8 +28,8 @@
 		// Negate the padding on .growthexperiments-homepage-module in Homepage.less
 		margin: 16px -16px -16px -16px;
 		padding: 12px 24px 12px;
-		background-color: @wmui-color-base100;
-		color: @colorGray5;
+		background-color: @background-color-base;
+		color: @color-subtle;
 		font-size: 0.8em;
 	}
 }
