--- a/modules/ext.growthExperiments.MentorDashboard/styles/Resources.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/Resources.less
@@ -1,7 +1,9 @@
+@import 'mediawiki.skin.variables.less';
+
 /* stylelint-disable selector-class-pattern */
 .growthexperiments-mentor-dashboard-module-resources {
 	.icon-references {
-		opacity: 0.66;
+		opacity: @opacity-icon-subtle;
 		width: 40px;
 		height: 40px;
 	}
