--- a/modules/ext.growthExperiments.PostEdit/PostEditDrawer.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditDrawer.less
@@ -1,5 +1,5 @@
+@import 'mediawiki.skin.variables.less';
 @import '../utils/variables.less';
-@import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
 
 .mw-ge-postEditDrawer {
 	.mw-ge-collapsibleDrawer-header {
