--- a/modules/ext.growthExperiments.PostEdit/PostEditToastMessage.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditToastMessage.less
@@ -1,6 +1,8 @@
+@import 'mediawiki.skin.variables.less';
+
 .mw-ge-postEditToastMessage {
 	pointer-events: auto;
-	opacity: 1;
+	opacity: @opacity-base;
 	transition: opacity 200ms;
 
 	&--hidden {
