--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/StructuredTaskOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/StructuredTaskOnboardingContent.less
@@ -1,4 +1,4 @@
-@import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
+@import 'mediawiki.skin.variables.less';
 @import '../utils/variables.less';
 @import '../utils/mixins.less';
 
@@ -18,10 +18,10 @@
 
 	&-link {
 		margin-top: 1em;
-		color: @wmui-color-accent50;
+		color: @color-progressive;
 
 		&:visited {
-			color: @wmui-color-accent50;
+			color: @color-progressive;
 		}
 	}
 
@@ -35,7 +35,7 @@
 	}
 
 	&-image {
-		box-shadow: inset 0 -1px 0 @wmui-color-base80;
+		box-shadow: inset 0 -1px 0 @border-color-subtle;
 		height: 216px;
 		background-position: center;
 		background-repeat: no-repeat;
