--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addimage/AddImageOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addimage/AddImageOnboardingContent.less
@@ -1,4 +1,4 @@
-@import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
+@import 'mediawiki.skin.variables.less';
 @import '../../utils/mixins';
 
 .addimage-onboarding-content {
@@ -42,7 +42,7 @@
 		}
 
 		&--subtext {
-			color: @wmui-color-base30;
+			color: @color-subtle;
 			.rel-font-size-and-line-height( @parentFontSize: 16px, @targetFontSize: 14.8px, @targetLineHeight:  22px );
 		}
 	}
