--- a/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageViewer.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageViewer.less
@@ -1,3 +1,5 @@
+@import 'mediawiki.skin.variables.less';
+
 .mw-ge-recommendedImageViewer {
 	.oo-ui-window-head {
 		text-align: right;
@@ -7,7 +9,7 @@
 		position: fixed;
 		top: 5px;
 		right: 8px;
-		opacity: 0.8;
+		opacity: @opacity-icon-base;
 	}
 
 	.oo-ui-window-body {
