--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageCaptionNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageCaptionNode.less
@@ -1,27 +1,29 @@
-@import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@paragraphPadding: 7px 8px 27px 8px; // adding bottom padding for help button
+@import 'mediawiki.skin.variables.less';
+
+// Add bottom padding for help button.
+@spacing-ve-ce-paragraph-node: 7px 8px 27px 8px;
 
 .mw-ge-recommendedImageCaption {
-	border: 2px solid @wmui-color-base50;
+	border: @border-width-thick @border-style-base @border-color-base;
 	position: relative;
 
 	.mw-ge-recommendedImageCaption-placeholder,
 	.ve-ce-paragraphNode {
-		padding: 7px 8px 27px 8px; // adding bottom padding for help button
+		padding: @spacing-ve-ce-paragraph-node;
 	}
 
 	.ve-ce-paragraphNode {
-		color: @wmui-color-base10;
+		color: @color-base;
 	}
 
 	.mw-ge-recommendedImageCaption-placeholder {
-		color: @wmui-color-base30;
+		color: @color-placeholder;
 		pointer-events: none;
 	}
 
 	&--with-placeholder {
-		border-color: @wmui-color-accent50;
-		background-color: @wmui-color-accent90;
+		background-color: @background-color-progressive-subtle;
+		border-color: @border-color-progressive;
 
 		.ve-ce-paragraphNode {
 			display: none;
@@ -29,14 +31,15 @@
 	}
 
 	&--with-warning {
-		border-color: @wmui-color-red50;
+		// TODO: Is error the right color for a class called `--with-warning`?
+		border-color: @border-color-error;
 	}
 
 	.mw-ge-recommendedImageCaption-help-button {
 		position: absolute;
 		right: 8px;
 		bottom: 8px;
-		opacity: 0.65;
+		opacity: @opacity-icon-subtle;
 
 		// Override OOUI ButtonWidget's size
 		&.oo-ui-buttonElement-frameless.oo-ui-iconElement > .oo-ui-buttonElement-button {
