--- a/modules/vue-components/CScoreCard.less
+++ b/modules/vue-components/CScoreCard.less
@@ -1,4 +1,4 @@
-@import ( reference ) '../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
+@import 'mediawiki.skin.variables.less';
 @topPadding: ( ( 24 / 14 ) * 1em );
 @standardPadding: ( ( 16 / 14 ) * 1em );
 @defaultLineHeight: ( ( 20 / 14 ) * 1em );
