--- a/modules/vue-components/CScoreCards.less
+++ b/modules/vue-components/CScoreCards.less
@@ -1,4 +1,4 @@
-@import ( reference ) '../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
+@import 'mediawiki.skin.variables.less';
 @import '../utils/mixins.less';
 @import 'mixins.less';
 
