--- a/modules/ext.growthExperiments.Help/HelpPanelSearchWidget.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelSearchWidget.less
@@ -1,8 +1,8 @@
-@import 'mediawiki.ui/variables';
+@import 'mediawiki.skin.variables.less';
 
 .mw-ge-help-panel-popup-search {
 	&-summary {
-		border-bottom: solid 1px @colorGray10;
+		border-bottom: @border-base;
 		padding-bottom: 10px;
 		margin-bottom: 10px;
 	}
@@ -12,7 +12,7 @@
 		word-break: break-word;
 
 		div {
-			color: @colorGray5;
+			color: @color-subtle;
 			font-size: 0.875em;
 		}
 	}
