--- a/modules/ext.growthExperiments.MentorDashboard/styles/MenteeOverview.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/MenteeOverview.less
@@ -1,4 +1,4 @@
-@import ( reference ) '../../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
+@import 'mediawiki.skin.variables.less';
 @import './variables.less';
 
 /* stylelint-disable selector-class-pattern */
