--- a/modules/ext.growthExperiments.StructuredTask.desktop/MinimizedToolbarDialogButton.less
+++ b/modules/ext.growthExperiments.StructuredTask.desktop/MinimizedToolbarDialogButton.less
@@ -1,10 +1,12 @@
+@import 'mediawiki.skin.variables.less';
+
 .mw-ge-minimizedToolbarDialogButton {
 	@dimension: 3em; // Same as HelpPanelButton
 	position: fixed;
 	bottom: 2em;
 	right: 5em;
 	z-index: 2;
-	opacity: 1;
+	opacity: @opacity-base;
 	transition: all 200ms;
 
 	&-container {
@@ -18,7 +20,7 @@
 	.oo-ui-buttonElement-button {
 		width: @dimension;
 		height: @dimension;
-		border-radius: 50%;
+		border-radius: @border-radius-circle;
 		box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.5 );
 	}
 }
