--- a/modules/utils/variables.less
+++ b/modules/utils/variables.less
@@ -1,4 +1,4 @@
-@import 'mediawiki.ui/variables';
+@import 'mediawiki.skin.variables.less';
 
 @homepageHeaderFont: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 @homepageModuleMargin: 8px;
@@ -16,6 +16,10 @@
 @suggestedEditsOpaqueBackgroundColor: #f4f9ff;
 @startEditingDialogSidePadding: 16px;
 @activeAnnotationBackgroundColor: @suggestedEditsOpaqueBackgroundColor;
+
+@background-color-growth-subtle: #f8f9fa;
+@background-color-growth-apparent: #eaecf0;
+@background-color-growth-step-progress-dot: #c8ccd1;
 
 @headerFontSize: 16/14em;
 
